/*
 * Copyright (C) 2020 Dremio
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package nessie.persist;

option java_package = "org.projectnessie.versioned.persist.serialize";
option java_outer_classname = "AdapterTypes";
option java_generate_equals_and_hash = true;

message CommitLogEntry {
  int64 createdTime = 1;
  bytes hash = 2;
  repeated bytes parents = 3;
  bytes metadata = 4;
  repeated KeyWithBytes puts = 5;
  repeated Key deletes = 6;
  int32 key_list_distance = 7;
  repeated KeyWithType key_list = 8;
  repeated bytes key_list_ids = 9;
  int64 commitSeq = 10;
}

message Key {
  repeated string element = 1;
}

message KeyWithType {
  Key key = 1;
  ContentId content_id = 2;
  int32 type = 3;
}

message KeyWithBytes {
  Key key = 1;
  ContentId content_id = 2;
  int32 type = 3;
  bytes value = 4;
}

message KeyList {
  repeated KeyWithType keys = 1;
}

message ContentId {
  string id = 1;
}

message ContentIdWithType {
  ContentId content_id = 1;
  int32 type_unused = 2; // ignore the value of this field
}

message ContentIdWithBytes {
  ContentId content_id = 1;
  int32 type_unused = 2; // ignore the value of this field
  bytes value = 3;
}

// Used by non-transactional database-adapters
message GlobalStateLogEntry {
  int64 createdTime = 1;
  bytes id = 2;
  repeated bytes parents = 3;
  repeated ContentIdWithBytes puts = 4;
}

message RefLogEntry {
  bytes ref_log_id = 1;
  bytes ref_name = 2;
  enum RefType {
    Branch = 0;
    Tag = 1;
  }
  RefType ref_type = 3;
  bytes commit_hash = 4;
  repeated bytes parents = 5;
  int64 operation_time = 6;
  enum Operation {
    CREATE_REFERENCE = 0;
    COMMIT = 1;
    DELETE_REFERENCE = 2;
    ASSIGN_REFERENCE = 3;
    MERGE = 4;
    TRANSPLANT = 5;
  }
  Operation operation = 7;
  repeated bytes source_hashes = 8;
}

// Used by non-transactional database-adapters
message GlobalStatePointer {
  bytes global_id = 1;
  // most recently updated named reference appears first
  repeated NamedReference named_references = 2;
  bytes ref_log_id = 3;
  repeated bytes global_parents_incl_head = 4;
  repeated bytes ref_log_parents_incl_head = 5;
}

// Used by transactional database-adapters
message RefLogParents {
  repeated bytes ref_log_parents_incl_head = 1;
}

message NamedReference {
  string name = 1;
  RefPointer ref = 2;
}

// Used by non-transactional database-adapters
message RefPointer {
  enum Type {
    Branch = 0;
    Tag = 1;
  }
  Type type = 1;
  bytes hash = 2;
}

message RepoProps {
  int32 repo_version = 1;
  repeated Entry properties = 2;
}

message Entry {
  string key = 1;
  string value = 2;
}
